menu, div imagem absolute and first title

--- a/brigadeiro.html
+++ b/brigadeiro.html
@@ -2,11 +2,32 @@
 
 <html>
     <head>
-        <title>
-            Brigadeiro
-        </title>
+        <title>Brigadeiro</title>
+        <link href="brigadeiro.css" rel="stylesheet">
     </head>
     <body>
-        <h1>Teste</h1>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Our Flavors</li>
+                <li>Who Made?</li>
+                <li>Galery</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+
+        <div>
+            <img src="https://s-media-cache-ak0.pinimg.com/originals/79/4f/70/794f70834655aefe163ec1e98392c37c.jpg" alt="Brigadeiro">
+        </div>
+
+        <section class="title">
+            <h1>
+                Paraíso<br>Brigadeiros
+            </h1>
+
+
+        </section>
+
     </body>
 </html>
